# uksivt-schedule-telegram-bot

./: Dockerfile  TehZadanie.1.docx  gantt  main.py  pyproject.toml  tgV2.rar
docs/: 19П-1 Курсовая Группа 6 Презентация 2.pptx  19П-1 Курсовая Группа 6 Презентация.pptx  19П-1 Курсовая Группа 6 Техническое задание.docx  Диаграмма ганта.txt  Диаграмма классов.txt  Диаграмма последовательностей.txt
