[tool.poetry]
name = "uksivt-schedule-telegram-bot"
version = "0.1.0"
description = ""
authors = ["mishapoiuytrewq <mikhail.boriso2014@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyTelegramBotAPI = "^4.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
